# erle_computer_vision_library

./: CMakeLists.txt  README.md
samples/colorFilter/: colorFilter.pro  main.cpp
samples/colorFilter/ComputerVision/: colorfilter.cpp  colorfilter.h
samples/colorFilter/gui/: gui.cpp  gui.h
samples/colorFilter/sensors/: sensors.cpp  sensors.h
src/: CMakeLists.txt
src/stable/fast/: CMakeLists.txt  cvfast.cpp
src/stable/pattern/: CMakeLists.txt  PatternDetector.cpp  PatternDetector.h
